# AI-Github-Automation-Test-2

./: .eslintrc.json  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
src/: index.js
tests/: smoke.test.js  test_basic.py
