[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-github-automation-test-2"
version = "1.0.0"
description = "AI GitHub Automation Test #2 - Improved version with better CI/CD"
authors = [{name = "fkx2016", email = "fkurka@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["automation", "testing", "ci-cd"]
dependencies = [
    "requests>=2.31.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/fkx2016/AI-Github-Automation-Test-2"
"Bug Reports" = "https://github.com/fkx2016/AI-Github-Automation-Test-2/issues"
"Source" = "https://github.com/fkx2016/AI-Github-Automation-Test-2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
